# openGJK_including_witnesspoint

./: CMakeLists.txt  openGJK.c
examples/c/: CMakeLists.txt  main.c
